[package]
name = "compaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.7.3", features = ["derive"]}
color-eyre = "0.5.11"
env_logger = "0.9.0"
glam = { version = "0.20.1", features = ["bytemuck"] }
gltf = "0.16.0"
obj = "0.10.2"
pollster = "0.2.4"
raw-window-handle = "0.4.2"
wgpu = "0.12.0"
winit = "0.26.0"

[profile.dev]
debug = 0

[profile.release]
lto = true

[features]

[profile.dev.package.'*']
opt-level = 3
